<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Raccoon Client</string>
    <string name="change">Change</string>
    <string name="guest">Guest</string> <!--  do not change for other languages -->
    <string name="default_bbs">bbs.iscabbs.com</string>
    <string name="login">in</string>
    <string name="logout">out</string>
    <string name="hint_hostname">Hostname of BBS</string>
	<string name="hint_port">Port of Raccoon port (usually 6145)</string>
    <string name="hint_user">Username (or "Guest")</string>
    <string name="text_pass">Password (stored in preferences)</string>
    <string name="hint_pass">Password</string>
  	<string name="done">Done!</string>
  	<string name="back">Up</string>
 	<string name="prev">Previous</string>
  	<string name="next">Next!</string>
 	<string name="post">Post</string>
	<string name="postanonymous">Post Anonymously</string>
 	<string name="unread">Unread</string>
  	<string name="joined">Joined</string>
  	<string name="all">All</string>
  	<string name="hint_post">Type your post</string>
	<string name="status">Status</string>
</resources>

