<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
   <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:textAppearance="?android:attr/textAppearanceLarge" />
     
      <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change" />

    
   <TextView        
        android:id="@+id/hostname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_bbs"
        android:textAppearance="?android:attr/textAppearanceSmall" />
   
   </LinearLayout>

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
 
   <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    
   <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:clickable="false" />

   <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />
    
    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post" />

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/prev" />

    <Button
        android:id="@+id/next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/next" />
    
    
   </LinearLayout>   

<TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status" />
 
     
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/radio_unread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unread"
		android:checked="true"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_joined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joined"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:onClick="onRadioButtonClicked"/>
</RadioGroup>
     
      
<ListView
   android:id="@+id/forumlist"
   android:layout_width="fill_parent" 
   android:layout_height="wrap_content"
   android:scrollbars="vertical"	
/>

<!--  a linearlayout 
  net.example.raccoonclient.SpecialTextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/messageout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" -->

<TextView
   android:id="@+id/message"
   android:layout_width="fill_parent" 
   android:layout_height="wrap_content"
   android:scrollbars="vertical"
   android:typeface="monospace"
/>
<!--  /net.example.raccoonclient.SpecialTextView -->
</LinearLayout>
